# xrr_ai_fitting

./: main.py  pyproject.toml
resource/weights/: stats.pt
src/app/: __main__.py  app.py  index.py  layout.py  plotly-cloud.toml  run.py
src/app/assets/: style.css
src/app/callbacks/: callbacks.py
src/app/components/: film_3d.py
src/app/logic/: ai_interface.py  fitting.py  layers.py  materials.py  plotting.py  utils.py  xrr_ai.py  xrr_simulation.py
src/app/pages/: home.py  xrr_app.py
src/app/pages/xrr_parts/: center_panel.py  left_panel.py  right_panel.py
