[project]
name = "xrr-ai-fitting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash[cloud,diskcache]>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "dash-table>=5.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
